[package]
name = "polymod"
version = "0.0.2"
authors = ["nitsuga5124 <nitsuga5124@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-identity = "0.3"
tracing = "0.1"
tracing-subscriber = "0.2"
time = "0.2"
serde_json = "1.0"
darkredis = "0.7"
serde-aux = "1.1"
toml = "0.5"
hex = "0.4"
rust-crypto = "0.2"
base64 = "0.13"

[dependencies.actix-web]
version = "3"

[dependencies.tokio]
version = "0.2"
features = ["fs"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.handlebars]
version = "3.0"
features = ["dir_source"]

[dependencies.reqwest]
version = "0.10"
features = ["json"]

[dependencies.sqlx]
version = "0.4"
default-features = false
features = ["runtime-actix-rustls", "macros", "postgres", "chrono"]
