[package]
name = "polymod"
version = "0.0.6"
authors = ["nitsuga5124 <nitsuga5124@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-identity = "0.3"
tracing = "0.1"
tracing-subscriber = "0.2"
time = "0.2"
serde_json = "1.0"
darkredis = "0.7"
serde-aux = "1.1"
toml = "0.5"
hex = "0.4"
rust-crypto = "0.2"
base64 = "0.13"
actix-multipart = "0.3"
futures = "0.3"
sanitize-filename = "0.2"
semver = "0.11"
actix-files = "0.4"
sha2 = "0.9"
strsim = "0.10"

[dependencies.actix-web]
version = "3"

[dependencies.actix-ratelimit]
git = "https://github.com/TerminalWitchcraft/actix-ratelimit/"
branch = "master"
default-features = false
features = ["redis-store"]

[dependencies.tokio]
version = "0.2"
features = ["fs"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.handlebars]
version = "3.0"
features = ["dir_source"]

[dependencies.reqwest]
version = "0.10"
features = ["json"]

[dependencies.sqlx]
version = "0.4"
default-features = false
features = ["runtime-actix-rustls", "macros", "postgres", "chrono", "offline"]
#
#[profile.dev]
#panic = "abort"
