[package]
name = "polymod"
version = "0.1.3-alpha"
authors = ["vicky5124 <vickyf5124@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# https://github.com/actix/actix-extras/pull/144
actix-identity = "0.3"
tracing = "0.1"
tracing-subscriber = "0.2"
time = "0.2"
serde_json = "1"
# https://github.com/Bunogi/darkredis/pull/25
darkredis = "0.7"
serde-aux = "2"
toml = "0.5"
hex = "0.4"
rust-crypto = "0.2"
base64 = "0.13"
actix-multipart = "0.3" # 0.4 beta
futures = "0.3"
sanitize-filename = "0.2"
semver = "0.11"
actix-files = "0.5" # 0.6 beta
sha2 = "0.9"
strsim = "0.10"
bitflags = "1.2"
rand = "0.8"
dotenv = "0.15"

[dependencies.actix-web]
version = "3" # 4
features = ["secure-cookies", "rustls"]

[dependencies.actix-ratelimit]
version = "0.3" # https://github.com/TerminalWitchcraft/actix-ratelimit/pull/13
default-features = false
features = ["redis-store"]

[dependencies.tokio]
version = "0.2" # 1
features = ["fs"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.handlebars]
version = "3.0"
features = ["dir_source"]

[dependencies.reqwest]
version = "0.10" # 0.11
features = ["json"]

[dependencies.sqlx]
version = "0.4" # 0.5
default-features = false
features = ["runtime-actix-rustls", "macros", "postgres", "chrono", "offline"]
#
#[profile.dev]
#panic = "abort"
